Fixed offset for wide screen jump

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -409,7 +409,7 @@ label {
 }
 
 .category:first-child {
-    padding-top: 12px;
+    padding-top: 24px;
 }
 
 .category h2 {
